Fix for dark mode tools image scaling.

--- a/dark.css
+++ b/dark.css
@@ -125,13 +125,12 @@ body
     margin-bottom: 6px;
     font-weight: 600;
 }
-.timage {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    width: 100%;
-}
-.timage img {
-    max-height: 10vh;
+.timage .tools-img {
+    max-height: 80%;
+    max-width: 80%;
+    padding-top: 20px;
+    border: 0;
+    display: block;
 }
 .user-info {
     background-color: #121212;
