--- a/light.css
+++ b/light.css
@@ -131,10 +131,6 @@ body
     border: 0;
     display: block;
 }
-.timage p {
-    font-size: 25px;
-    padding-left: 15px;
-}
 .user-info {
     background-color: #FFFFFF;
 }
